test_regress/t/t_force_func.out
%Error: t/t_force_func.v:32:  got='h0 exp='h00000001
%Error: t/t_force_func.v:36:  got='h0 exp='h00000002
%Error: t/t_force_func.v:43:  got='h0 exp='h00000003
